# dash-playground

./: app.py  main.py  pyproject.toml  readme.md
layouts/: page_one.py  page_two.py
static/: page_one.css  page_two.css
