[tool.poetry]
name = "dash-playground"
version = "0.1.0"
description = ""
authors = ["moaazsidat <moaaz.omer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.19.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
